# llm-swap

./: README.md  config.example.yaml  conftest.py  pyproject.toml
llm_swap/: __init__.py  cli.py  config.py  health.py  logger.py  providers.py  proxy.py  router.py
tests/: test_cli.py  test_config.py  test_health.py  test_providers.py  test_proxy.py  test_router.py
