[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "llm_swap"
version = "0.1.0"
description = "A local reverse-proxy that routes OpenAI-compatible requests to any configured LLM backend."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "llm_swap contributors" }
]
keywords = ["llm", "openai", "proxy", "anthropic", "mistral", "ollama", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "click>=8.1.7",
    "anyio>=4.3.0",
]

[project.scripts]
llm_swap = "llm_swap.cli:cli"

[project.urls]
Homepage = "https://github.com/example/llm_swap"
Issues = "https://github.com/example/llm_swap/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_swap*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
